# internet-shop-drf

./: .env-sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
internet_shop/: custom_email_backend.py  db.sqlite3
internet_shop/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
internet_shop/internet_shop/: settings.py  urls.py
internet_shop/shop/: admin.py  filters.py  middleware.py  mixins.py  models.py  pagination.py  repository.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
internet_shop/shop/fixtures/: test_data.json
internet_shop/shop/management/commands/: generate_comments.py  generate_orders.py  generate_test_data.py  services.py
internet_shop/shop/migrations/: 0001_initial.py  0002_alter_productcategory_options_alter_product_price.py  0002_alter_userbalance_balance.py  0003_rename_price_product_old_price_and_more.py  0004_product_discount_alter_product_old_price.py  0005_remove_product_old_price.py  0006_product_old_price.py  0007_product_price.py  0008_remove_product_available_and_more.py  0009_product_available_product_available_quantity.py  0010_cart.py  0011_alter_cart_options_alter_product_options_and_more.py  0012_alter_product_price.py  0013_remove_cart_product_remove_cart_quantity_and_more.py  0014_alter_product_price.py  0015_remove_product_price.py  0016_product_price.py  0017_remove_product_price.py  0018_product_price.py
